fix: video background alignment

--- a/client/index.scss
+++ b/client/index.scss
@@ -28,7 +28,6 @@ body {
 
   #video-bg {
     position: absolute;
-    top: 0;
     bottom: 0;
     right: 0;
     left: 0;
